--- a/address-service/src/main/resources/application.properties
+++ b/address-service/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=jassa@123
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.application.name=address-app
+server.port=8080
+server.servlet.context-path=/address-app/api
